--- a/Assets/Resources/PicoSdkPCConfig.json
+++ b/Assets/Resources/PicoSdkPCConfig.json
@@ -1,1 +1,1 @@
-{"general":{"region":"i18n"},"account":{"access_token":""},"package":{"package_name":"unity.Suriyun.AttackZombie","package_version_code":10000,"package_version_name":"1.0"}}
+{"general":{"region":"i18n"},"account":{"access_token":""},"package":{"package_name":"com.decis.experiment","package_version_code":10000,"package_version_name":"1.0"}}
